changes in file

--- a/happytours4you_morten/index.html
+++ b/happytours4you_morten/index.html
@@ -107,7 +107,7 @@
         <div class="testimonial-card">
             <img src="images/girl-in-orange.jpg" alt="Emma Stone">
             <p class="testimonial-text">
-                Amazing option! The agency delivered beyond my expectations!
+                Amazing option! The agency delivered beyond my expectations! XXX
             </p>
             <p class="user-name">John Smith</p>
             <p class="job-position">Web Developer</p>
@@ -193,6 +193,8 @@
     </div>
 </footer>
     
+
+
 </body>
 </html>
 
